horizontal scroll fixed

--- a/src/components/organisms/Footer/Footer.style.scss
+++ b/src/components/organisms/Footer/Footer.style.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/variables';
 
 footer {
-	width: 100vw;
 	background-color: $color-primary;
 }
 
